--- a/pages/class.html
+++ b/pages/class.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My HTML Project</title>
+    <title>Clases</title>
     <link rel="stylesheet" href="assets/css/style.css">
 </head>
 <body>
@@ -17,7 +17,6 @@
                 <li><a href="/pages/about.html">Cultura</a></li>
                 <li><a href="/pages/contact.html">Contacto</a></li>
                 <li><a href="/pages/about.html">Sobre nosotros</a></li>
-                
             </ul>
         </nav>
     </header>
@@ -30,6 +29,6 @@
     <footer>
         <p>&copy; 2025 el copy xd</p>
     </footer>
-    <script src="assets/js/script.js"></script>
+  
 </body>
 </html>
