--- a/pages/contact.html
+++ b/pages/contact.html
@@ -11,9 +11,12 @@
         <h1>Contact Us</h1>
         <nav>
             <ul>
-                <li><a href="../index.html">inicio</a></li>
-                <li><a href="about.html">sobre</a></li>
-                <li><a href="contact.html">Contacto</a></li>
+                <li><a href="/index.html">Inicio</a></li>
+                <li><a href="/pages/event.html">Evento</a></li>
+                <li><a href="/pages/class.html">Clases</a></li>
+                <li><a href="/pages/about.html">Cultura</a></li>
+                <li><a href="/pages/contact.html">Contacto</a></li>
+                <li><a href="/pages/about.html">Sobre nosotros</a></li>
             </ul>
         </nav>
     </header>
